@@ -1,0 +1,27 @@
+<config>
+  <!-- Configuration: Do not create a config backup on each change -->
+  <config-rotate v='false'/>
+
+  <!-- HTTP Server: Allow remote access -->
+  <allow v='0/0'/>
+
+  <!-- Logging: Minimal logs to "journalctl -u fahclient" only -->
+  <log v='/dev/null'/>
+  <log-rotate v='false'/>
+  <log-time v='false'/>
+  <verbosity v='0'/>
+
+  <!-- Slot Control: Do not start folding right after install -->
+  <paused v='true'/>
+
+  <!-- User Information: Fold as user "DietPi" for team "DietPi" -->
+  <passkey v='06c869246e88c00cb05cc4d1758a97f9'/>
+  <team v='234437'/>
+  <user v='DietPi'/>
+
+  <!-- Web Server: Allow remote web UI access -->
+  <web-allow v='0/0'/>
+
+  <!-- Folding Slots: Enable GPU slots if supported -->
+  <gpu v='true'/>
+</config>
