@@ -2424,6 +2424,22 @@ To reinstall now, run: "dietpi-software reinstall 106 144 145"
 			# Make userdata dir world-executable so service users don't need to be in dietpi group to access their data dir: https://github.com/MichaIng/DietPi/pull/3536#issuecomment-628515444
 			G_EXEC chmod a+x /mnt/dietpi_userdata
 			#-------------------------------------------------------------------------------
+			# Reinstalls
+			#	Folding@Home: https://github.com/MichaIng/DietPi/pull/3546
+			if (( $G_DIETPI_INSTALL_STAGE == 2 )); then
+
+				if grep -q '^aSOFTWARE_INSTALL_STATE\[2\]=2' /boot/dietpi/.installed; then
+
+					G_DIETPI-NOTIFY 2 'Preparing Folding@Home update...'
+					[[ -f '/lib/systemd/system/fahclient.service' ]] && rm /etc/systemd/system/fahclient.service
+					[[ -f '/var/log/fahclient.log' ]] && rm /var/log/fahclient.log
+					dpkg-query -s 'fahclient' &> /dev/null && G_AGP fahclient
+
+				fi
+				echo 2 >> /var/tmp/dietpi/dietpi-update_reinstalls
+
+			fi
+			#-------------------------------------------------------------------------------
 			# Last subversion patch completed
 			# - Apply reinstalls
 			if [[ -f '/var/tmp/dietpi/dietpi-update_reinstalls' ]]; then
